--- a/src/main/webapp/editarAsignatura.xhtml
+++ b/src/main/webapp/editarAsignatura.xhtml
@@ -12,7 +12,7 @@
 	<title>Editar</title>
 </h:head>
 <h:body>
-	<h2>Editar Asignatura</h2>
+	<h2>Modificar Asignatura</h2>
 	<h:form id="form">
 	<p:growl id="msgs" showDetail="true" />
 		
