--- a/src/main/webapp/indexasignaturas.xhtml
+++ b/src/main/webapp/indexasignaturas.xhtml
@@ -7,7 +7,7 @@
 	<meta charset="utf-8" name="viewport"
 		content="width=device-width, initial-scale=1"
 		http-equiv="X-UA-Conpatible" />
-	<title>Docentes</title>
+	<title>Asinatura</title>
 	<!-- BOOTSTRAP -->
 	<link rel="stylesheet"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
