--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -26,7 +26,7 @@
 					<span class="glyphicon glyphicon-list-alt"></span>Agenda Académica
 				</h1>
 				<p class="lead">Administra tus vida académica de la mejor
-					manera.</p>
+					manera.yy</p>
 			</div>
 		</div>
 	</header>
