--- a/src/main/webapp/crearAsignatura.xhtml
+++ b/src/main/webapp/crearAsignatura.xhtml
@@ -7,11 +7,13 @@
 	<meta charset="utf-8" name="viewport"
 		content="width=device-width, initial-scale=1"
 		http-equiv="X-UA-Conpatible" />
-<<<<<<< HEAD
+<!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"></link>
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            
 	<title>Crear Asignatura</title>
-=======
-	<title>Crear Asigntura</title>
->>>>>>> branch 'master' of https://github.com/gemycz/Proyecto-Agenda-Academyca.git
 	<!-- BOOTSTRAP -->
 	<link rel="stylesheet"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
