--- a/src/main/webapp/creardocente.xhtml
+++ b/src/main/webapp/creardocente.xhtml
@@ -1,38 +1,46 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui"
+	xmlns:p="http://primefaces.org/ui" xmlns:b="http://bootsfaces.net/ui"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 	<meta charset="utf-8" name="viewport"
 		content="width=device-width, initial-scale=1"
 		http-equiv="X-UA-Conpatible" />
-		<!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"></link>
+	<title>Registrar Docente</title>
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-            
-	<title>Crear Docente</title>
-	<!-- BOOTSTRAP -->
-	<link rel="stylesheet"
-		href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-		crossorigin="anonymous"></link>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 </h:head>
 <h:body>
 	<!-- BANNER -->
 	<header>
-		<div class="jumbotron jumbotron-fluid">
+		<!-- MENU PRINCIPAL -->
+		<b:navBar class="menup" brandHref="#" inverse="true"
+			style="padding-top:2px;padding-bottom:2px;margin-bottom:0px;background:#226BCB;color:white;
+			border-color:#226BCB;"
+			fixed="top">
+			<img src="img/studaylogo2.png" width="120" />
+			<b:navbarLinks pull="right">
+				<b:navLink value="    " href="#"></b:navLink>
+			</b:navbarLinks>
+			<b:navbarLinks pull="right" styleClass="hidden-xs">
+				<b:dropMenu value="Usuario">
+					<b:navLink value="Cerrar Sesión" href="login.jsf"></b:navLink>
+				</b:dropMenu>
+			</b:navbarLinks>
+		</b:navBar>
+		<!--  -->
+		<b:jumbotron class="jumbotron"
+			style="padding-top:60px;padding-bottom:20px; background-image: url('img/wallpaper5.jpg');">
 			<div class="container">
-				<h1 class="display-4">
-					<span class="glyphicon glyphicon-list-alt"></span>Agenda Académica
-				</h1>
-				<p class="lead">Administra tus vida académica de la mejor
-					manera.</p>
+				<h1>Docente</h1>
+				<p>Administra tu vida académica de la mejor manera.</p>
+				<p>
+					<a href="http://localhost:8081/jsf/PresentPage.html"
+						target="_blank" class="btn btn-primary btn-lg">Saber Más</a>
+				</p>
 			</div>
-		</div>
+		</b:jumbotron>
 	</header>
 	<!-- MENU -->
 	<p:tabMenu activeIndex="#{param.i}">
@@ -52,43 +60,82 @@
 			<f:param name="i" value="3" />
 		</p:menuitem>
 	</p:tabMenu>
+	<!-- FORM -->
+	<div class="container">
+		<b:panel>
+			<f:facet name="heading">
+				<i style="padding-right: 20px" />
+				<h:outputText value="AGREGAR DOCENTE" />
+				<b:badge style="margin-left:10px; background-color:#5cb85c"
+					value="REGISTRAR" />
+			</f:facet>
+			<h:form>
+				<b:container layout="fluid">
+					<b:panelGrid colSpans="6,6">
+						<b:panel title="REGISTRAR DOCENTE" look="info"
+							showCollapseLink="true">
+							<b:row>
+								<b:column medium-screen="4">
+									<p:outputLabel value="Nombre:" />
+								</b:column>
+								<b:column medium-screen="8">
+									<b:inputText id="nombre" value="#{docente.NOMBRE_DOCENTE}"
+										placeholder="Ejemplo: Pedro">
+									</b:inputText>
+								</b:column>
+							</b:row>
+							<b:row>
+								<b:column medium-screen="4">
+									<p:outputLabel value="Apellido:" />
+								</b:column>
+								<b:column medium-screen="8">
+									<b:inputText id="apellido" value="#{docente.APELLIDO_DOCENTE}"
+										placeholder="Ejemplo: Lopez"></b:inputText>
+								</b:column>
+							</b:row>
+							<b:row>
+								<b:column medium-screen="4">
+									<p:outputLabel value="Cédula:" />
+								</b:column>
+								<b:column medium-screen="8">
+									<b:inputText id="cedula" value="#{docente.CEDULA_DOCENTE}"
+										placeholder="Ejemplo: 2300552102" required="true">
+										<f:validateLength maximun="10" />
+									</b:inputText>
+								</b:column>
+							</b:row>
+							<b:row>
+								<b:column medium-screen="4">
+									<p:outputLabel value="Correo:" />
+								</b:column>
+								<b:column medium-screen="8">
+									<b:inputText id="correo" value="#{docente.CORREO_DOCENTE}"
+										placeholder="Ejemplo: pedrolopez@email.com"></b:inputText>
+								</b:column>
+							</b:row>
+							<b:row>
+								<b:column medium-screen="4">
+									<p:outputLabel value="Teléfono:" />
+								</b:column>
+								<b:column medium-screen="8">
+									<b:inputText id="telefono" value="#{docente.TELEFONO_DOCENTE}"
+										placeholder="Ejemplo: 0979796077"></b:inputText>
+								</b:column>
+							</b:row>
+							<b:commandButton action="#{docenteBean.guardar(docente)}"
+								value="Guardar" ajax="true" update="@none" look="success"
+								iconAwesome="fa-floppy-o"></b:commandButton>
+						</b:panel>
+					</b:panelGrid>
+				</b:container>
+			</h:form>
+		</b:panel>
+	</div>
 	<!--  -->
-	<h:form>
-		<p:panelGrid columns="4" layout="tabular"
-			columnClasses="p-col-12 p-md-3 p-xl-2, p-col-12 p-md-9 p-xl-4, p-col-12 p-md-3 p-xl-2, p-col-12 p-md-9 p-xl-4"
-			contentStyleClass="p-align-baseline ui-fluid">
-
-			<font></font>
-			<p:outputLabel for="nombre" value="Nombre:" />
-			<font></font>
-			<p:inputText id="nombre" value="#{docente.NOMBRE_DOCENTE}"></p:inputText>
-			<font></font>
-			<p:outputLabel for="apellido" value="Apellido:" />
-			<font></font>
-			<p:inputText id="apellido" value="#{docente.APELLIDO_DOCENTE}"></p:inputText>
-			<font></font>
-			<p:outputLabel for="cedula" value="Cédula:" />
-			<font></font>
-			<p:inputText id="cedula" value="#{docente.CEDULA_DOCENTE}"></p:inputText>
-			<font></font>
-			<p:outputLabel for="correo" value="Correo:" />
-			<font></font>
-			<p:inputText id="correo" value="#{docente.CORREO_DOCENTE}"></p:inputText>
-			<font></font>
-			<p:outputLabel for="telefono" value="Teléfono:" />
-			<font></font>
-			<p:inputText id="telefono" value="#{docente.TELEFONO_DOCENTE}"></p:inputText>
-			<font></font>
-			<p:commandButton action="#{docenteBean.guardar(docente)}"
-				value="Guardar"></p:commandButton>
-			<font></font>
-		</p:panelGrid>
-		<font></font>
-	</h:form>
-	<!-- SCRIPT BOOTSTRAP -->
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-		crossorigin="anonymous"></script>
+	<footer class="sticky-bottom" style="background: #000;">
+		<p class="text-light text-center"
+			style="color: white; padding-top: 40px; padding-bottom: 40px;">(c)
+			2019 StuDay Agenda. Todos los derechos reservados.</p>
+	</footer>
 </h:body>
 </html>
