--- a/src/main/webapp/editardocente.xhtml
+++ b/src/main/webapp/editardocente.xhtml
@@ -2,36 +2,45 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui"
+	xmlns:p="http://primefaces.org/ui" xmlns:b="http://bootsfaces.net/ui"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 	<meta charset="utf-8" name="viewport"
 		content="width=device-width, initial-scale=1"
 		http-equiv="X-UA-Conpatible" />
-		<!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"></link>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<title>Editar Docente</title>
-	<!-- BOOTSTRAP -->
-	<link rel="stylesheet"
-		href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-		crossorigin="anonymous"></link>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 </h:head>
 <h:body>
 	<!-- BANNER -->
 	<header>
-		<div class="jumbotron jumbotron-fluid">
+		<!-- MENU PRINCIPAL -->
+		<b:navBar class="menup" brandHref="#" inverse="true"
+			style="padding-top:2px;padding-bottom:2px;margin-bottom:0px;background:#226BCB;color:white;
+			border-color:#226BCB;"
+			fixed="top">
+			<img src="img/studaylogo2.png" width="120" />
+			<b:navbarLinks pull="right">
+				<b:navLink value="    " href="#"></b:navLink>
+			</b:navbarLinks>
+			<b:navbarLinks pull="right" styleClass="hidden-xs">
+				<b:dropMenu value="Usuario">
+					<b:navLink value="Cerrar Sesión" href="login.jsf"></b:navLink>
+				</b:dropMenu>
+			</b:navbarLinks>
+		</b:navBar>
+		<!--  -->
+		<b:jumbotron class="jumbotron"
+			style="padding-top:60px;padding-bottom:20px; background-image: url('img/wallpaper5.jpg');">
 			<div class="container">
-				<h1 class="display-4">
-					<span class="glyphicon glyphicon-list-alt"></span>Agenda Académica
-				</h1>
-				<p class="lead">Administra tus vida académica de la mejor
-					manera.</p>
+				<h1>Docente</h1>
+				<p>Administra tu vida académica de la mejor manera.</p>
+				<p>
+					<a href="http://localhost:8081/jsf/PresentPage.html"
+						target="_blank" class="btn btn-primary btn-lg">Saber Más</a>
+				</p>
 			</div>
-		</div>
+		</b:jumbotron>
 	</header>
 	<!-- MENU -->
 	<p:tabMenu activeIndex="#{param.i}">
@@ -51,36 +60,80 @@
 			<f:param name="i" value="3" />
 		</p:menuitem>
 	</p:tabMenu>
-	<!--  -->
-	<h:form>
-		<h:panelGrid columns="2" cellspacing="20" border="1">
-			<f:facet name="header"></f:facet>
-			<h:outputText value="Editar"></h:outputText>
-
-			<h:outputText value="Nombre"></h:outputText>
-			<h:inputText value="#{docente.NOMBRE_DOCENTE}"></h:inputText>
-
-			<h:outputText value="Apellido"></h:outputText>
-			<h:inputText value="#{docente.APELLIDO_DOCENTE}"></h:inputText>
-
-			<h:outputText value="Cedula"></h:outputText>
-			<h:inputText value="#{docente.CEDULA_DOCENTE}"></h:inputText>
-
-			<h:outputText value="Correo"></h:outputText>
-			<h:inputText value="#{docente.CORREO_DOCENTE}"></h:inputText>
-
-			<h:outputText value="Teléfono"></h:outputText>
-			<h:inputText value="#{docente.TELEFONO_DOCENTE}"></h:inputText>
-			<f:facet name="footer">
-				<h:commandButton action="#{docenteBean.actualizar(docente)}"
-					value="Actualizar"></h:commandButton>
-			</f:facet>
-		</h:panelGrid>
-	</h:form>
-	<!-- SCRIPT BOOTSTRAP -->
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-		crossorigin="anonymous"></script>
+	<!-- FORM -->
+	<b:panel>
+		<f:facet name="heading">
+			<i style="padding-right: 20px" />
+			<h:outputText value="EDITAR DOCENTE" />
+			<b:badge style="margin-left:10px; background-color:#EDD41C"
+				value="EDITAR" />
+		</f:facet>
+		<h:form>
+			<b:container layout="fluid">
+				<b:panelGrid colSpans="6,6">
+					<b:panel title="ACTUALIZAR DOCENTE" look="info"
+						showCollapseLink="true">
+						<b:row>
+							<b:column medium-screen="4">
+								<p:outputLabel value="Nombre:" />
+							</b:column>
+							<b:column medium-screen="8">
+								<b:inputText id="nombre" value="#{docente.NOMBRE_DOCENTE}"
+									placeholder="Ejemplo: Pedro">
+								</b:inputText>
+							</b:column>
+						</b:row>
+						<b:row>
+							<b:column medium-screen="4">
+								<p:outputLabel value="Apellido:" />
+							</b:column>
+							<b:column medium-screen="8">
+								<b:inputText id="apellido" value="#{docente.APELLIDO_DOCENTE}"
+									placeholder="Ejemplo: Lopez"></b:inputText>
+							</b:column>
+						</b:row>
+						<b:row>
+							<b:column medium-screen="4">
+								<p:outputLabel value="Cédula:" />
+							</b:column>
+							<b:column medium-screen="8">
+								<b:inputText id="cedula" value="#{docente.CEDULA_DOCENTE}"
+									placeholder="Ejemplo: 2300552102" required="true">
+									<f:validateLength maximun="10" />
+								</b:inputText>
+							</b:column>
+						</b:row>
+						<b:row>
+							<b:column medium-screen="4">
+								<p:outputLabel value="Correo:" />
+							</b:column>
+							<b:column medium-screen="8">
+								<b:inputText id="correo" value="#{docente.CORREO_DOCENTE}"
+									placeholder="Ejemplo: pedrolopez@email.com"></b:inputText>
+							</b:column>
+						</b:row>
+						<b:row>
+							<b:column medium-screen="4">
+								<p:outputLabel value="Teléfono:" />
+							</b:column>
+							<b:column medium-screen="8">
+								<b:inputText id="telefono" value="#{docente.TELEFONO_DOCENTE}"
+									placeholder="Ejemplo: 0979796077"></b:inputText>
+							</b:column>
+						</b:row>
+						<b:commandButton action="#{docenteBean.actualizar(docente)}"
+							value="Guardar" ajax="true" update="@none" look="success"
+							iconAwesome="fa-floppy-o">
+						</b:commandButton>
+					</b:panel>
+				</b:panelGrid>
+			</b:container>
+		</h:form>
+	</b:panel>
+	<footer class="sticky-bottom" style="background: #000;">
+		<p class="text-light text-center"
+			style="color: white; padding-top: 40px; padding-bottom: 40px;">(c)
+			2019 StuDay Agenda. Todos los derechos reservados.</p>
+	</footer>
 </h:body>
 </html>
