--- a/src/main/webapp/indexdocente.xhtml
+++ b/src/main/webapp/indexdocente.xhtml
@@ -3,37 +3,44 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:b="http://bootsfaces.net/ui" 
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<meta charset="utf-8" name="viewport"
 		content="width=device-width, initial-scale=1"
 		http-equiv="X-UA-Conpatible" />
-		<!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"></link>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<title>Docentes</title>
-	<!-- BOOTSTRAP -->
-	<link rel="stylesheet"
-		href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-		crossorigin="anonymous"></link>
 	<link rel="stylesheet" type="text/css" href="main.css" />
 </h:head>
 <h:body>
-	<!-- BANNER -->
+		<!-- BANNER -->
 	<header>
-		<div class="jumbotron jumbotron-fluid">
+	<!-- MENU PRINCIPAL -->
+	<b:navBar class="menup" brandHref="#"
+			inverse="true"
+			style="padding-top:2px;padding-bottom:2px;margin-bottom:0px;background:#226BCB;color:white;
+			border-color:#226BCB;" fixed="top"><img src="img/studaylogo2.png" width="120"/>
+			<b:navbarLinks pull="right">
+				<b:navLink value="    " href="#"></b:navLink>
+			</b:navbarLinks>
+			<b:navbarLinks pull="right" styleClass="hidden-xs">
+				<b:dropMenu value="Usuario">
+					<b:navLink value="Cerrar Sesión" href="login.jsf"></b:navLink>
+				</b:dropMenu>
+			</b:navbarLinks>
+		</b:navBar>
+	<!--  -->
+		<b:jumbotron class="jumbotron" style="padding-top:60px;padding-bottom:20px; background-image: url('img/wallpaper5.jpg');">
 			<div class="container">
-				<h1 class="display-4">
-					<span class="glyphicon glyphicon-list-alt"></span>Agenda Académica
-				</h1>
-				<p class="lead">Administra tus vida académica de la mejor
-					manera.</p>
+				<h1>Docente</h1>
+				<p>Administra tu vida académica de la mejor manera.</p>
+				<p>
+					<a href="http://localhost:8081/jsf/PresentPage.html" target="_blank" class="btn btn-primary btn-lg">Saber Más</a>
+				</p>
 			</div>
-		</div>
+		</b:jumbotron>
 	</header>
-	<!-- MENU -->
+<!-- MENU -->
 	<p:tabMenu activeIndex="#{param.i}">
 		<p:menuitem value="Agenda" outcome="/index.xhtml" icon="pi pi-home">
 			<f:param name="i" value="0" />
@@ -57,59 +64,63 @@
 			<h:outputText value="Lista de Docentes"></h:outputText>
 		</h2>
 		<h:form>
-			<p:dataTable value="#{docenteBean.arrayList}" var="docente"
+			<b:dataTable value="#{docenteBean.arrayList}" var="docente"
 				border="1">
-				<p:column>
+				<b:dataTableColumn>
 					<f:facet name="header">ID</f:facet>
 					<h:outputText value="#{docente.ID_DOCENTE}"></h:outputText>
-				</p:column>
-				<p:column>
+				</b:dataTableColumn>
+				<b:dataTableColumn>
 					<f:facet name="header">Nombre</f:facet>
 					<h:outputText value="#{docente.NOMBRE_DOCENTE}"></h:outputText>
-				</p:column>
-				<p:column>
+				</b:dataTableColumn>
+				<b:dataTableColumn>
 					<f:facet name="header">Apellido</f:facet>
 					<h:outputText value="#{docente.APELLIDO_DOCENTE}"></h:outputText>
-				</p:column>
-				<p:column>
+				</b:dataTableColumn>
+				<b:dataTableColumn>
 					<f:facet name="header">Cedula</f:facet>
 					<h:outputText value="#{docente.CEDULA_DOCENTE}"></h:outputText>
-				</p:column>
-				<p:column>
+				</b:dataTableColumn>
+				<b:dataTableColumn>
 					<f:facet name="header">Correo</f:facet>
 					<h:outputText value="#{docente.CORREO_DOCENTE}"></h:outputText>
-				</p:column>
-				<p:column>
+				</b:dataTableColumn>
+				<b:dataTableColumn>
 					<f:facet name="header">Teléfono</f:facet>
 					<h:outputText value="#{docente.TELEFONO_DOCENTE}"></h:outputText>
-				</p:column>
-				<p:column>
+				</b:dataTableColumn>
+				<b:dataTableColumn>
 					<f:facet name="header">Editar</f:facet>
-					<p:commandButton action="#{docenteBean.editar(docente.ID_DOCENTE)}"
-						value="Editar" styleClass="button-edit"></p:commandButton>
-				</p:column>
-				<p:column>
+					<b:commandButton action="#{docenteBean.editar(docente.ID_DOCENTE)}"
+						value="Editar" ajax="true" update="@none"
+						look="warning" style="width:80px" iconAwesome="fa-pencil" ></b:commandButton>
+				</b:dataTableColumn>
+				<b:dataTableColumn>
 					<f:facet name="header">Eliminar</f:facet>
-					<p:commandButton action="#{docenteBean.eliminar(docente.ID_DOCENTE)}"
-						value="Eliminar">
+					<b:commandButton
+						action="#{docenteBean.eliminar(docente.ID_DOCENTE)}"
+						value="Eliminar" ajax="true" update="@none" look="danger"
+						 iconAwesome="fa-trash">
 						<p:confirm header="Confirmación" message="¿Estás seguro?"
 							icon="pi pi-exclamation-triangle" />
-					</p:commandButton>
+					</b:commandButton>
 					<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
 						<p:commandButton value="Si" type="button"
 							styleClass="ui-confirmdialog-yes" icon="pi pi-check" />
 						<p:commandButton value="No" type="button"
 							styleClass="ui-confirmdialog-no" icon="pi pi-times" />
 					</p:confirmDialog>
-				</p:column>
-			</p:dataTable>
-			<p:commandButton action="#{docenteBean.PaginaAdd()}" value="Agregar"></p:commandButton>
+				</b:dataTableColumn>
+			</b:dataTable>
+			    <b:commandButton action="#{docenteBean.PaginaAdd()}"
+				value="Agregar" ajax="true" update="@none" look="primary"
+				 iconAwesome="fa-plus"/>
 		</h:form>
 	</div>
-	<!-- SCRIPT -->
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-		crossorigin="anonymous"></script>
+	<footer class="sticky-bottom" style="background: #000;">
+		<p class="text-light text-center" style="color:white;padding-top:40px;padding-bottom:40px;">(c) 2019 StuDay Agenda. Todos
+			los derechos reservados.</p>
+	</footer>
 </h:body>
 </html>
