--- a/src/main/webapp/indexestudiante.xhtml
+++ b/src/main/webapp/indexestudiante.xhtml
@@ -5,51 +5,9 @@
 	xmlns:p="http://primefaces.org/ui">	
 <h:head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" http-equiv="X-UA-Conpatible" />    
-    <title>Estudiante</title>
-    <!-- BOOTSTRAP -->
-	<link rel="stylesheet"
-		href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-		crossorigin="anonymous"></link>
-	<link rel="stylesheet" type="text/css" href="main.css" />
+    <title>Plantilla Básica JSF </title>
 </h:head>
 <h:body>
-<!-- BANNER -->
-	<header>
-		<div class="jumbotron jumbotron-fluid">
-			<div class="container">
-				<h1 class="display-4">
-					<span class="glyphicon glyphicon-list-alt"></span>Agenda Académica
-				</h1>
-				<p class="lead">Administra tus vida académica de la mejor
-					manera.</p>
-			</div>
-		</div>
-	</header>
-	<!-- MENU -->
-	<p:tabMenu activeIndex="#{param.i}">
-		<p:menuitem value="Agenda" outcome="/index.xhtml" icon="pi pi-home">
-			<f:param name="i" value="0" />
-		</p:menuitem>
-		<p:menuitem value="Docentes" outcome="/indexdocente.xhtml"
-			icon="pi pi-user">
-			<f:param name="i" value="1" />
-		</p:menuitem>
-		<p:menuitem value="Tareas" outcome="/indextareas.xhtml"
-			icon="pi pi-briefcase">
-			<f:param name="i" value="2" />
-		</p:menuitem>
-		<p:menuitem value="Asignaturas" outcome="/indexasignaturas.xhtml"
-			icon="pi pi-briefcase">
-			<f:param name="i" value="3" />
-		</p:menuitem>
-		<p:menuitem value="Estudiante" outcome="/indexestudiante.xhtml"
-			icon="pi pi-briefcase">
-			<f:param name="i" value="4" />
-		</p:menuitem>
-	</p:tabMenu>
-	<!--  -->
-	<div class="container">
 	<h2>
 		<h:outputText value="Lista de clientes"></h:outputText>
 	</h2>
@@ -103,11 +61,6 @@
 		</h:dataTable>
 				<h:commandButton action="#{estudianteBean.agregar()}" value="Agregar Estudiante"></h:commandButton>
 	</h:form>
-</div>
-	<!-- SCRIPT -->
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-		crossorigin="anonymous"></script>	
+	
 </h:body>
 </html>
